# LearnNest

./: .env.example  .gitignore  app.py  gemini_ai.py  pyproject.toml  requirements.txt  run.ps1  start.sh
media/: learnnest.db
media/uploads/chat_files/: 2_ad13970b3b3a4a42bafb57cf50c39b58_requirements.txt
sir_rafique/: learnnest.db
static/css/: dashboard.css  main.css
static/js/: dashboard.js  main.js
templates/: admin_dashboard.html  admin_instructors.html  ai_notes_instructor.html  ai_notes_student.html  base.html  community_chat.html  course_discussion.html  direct_messages.html  messaging_hub.html  notifications.html  user_profile.html
templates/admin/: dashboard.html  instructors.html  students.html
templates/auth/: login.html  register.html
templates/errors/: 404.html
templates/instructor/: assignment_submissions.html  course_assignments.html  course_content.html  course_discussions.html  course_quizzes.html  course_students.html  courses.html  create_assignment.html  create_course.html  create_quiz.html  dashboard.html  edit_course.html  edit_forum.html  edit_profile.html  edit_quiz.html  enrollments.html  forum_topics.html  quiz_analytics.html  quiz_results.html  topic_detail.html
templates/student/: browse_courses.html  course_forums.html  course_rankings.html  course_view.html  course_view.html.backup  course_view.html.original  dashboard.html  dashboard.html.backup  my_enrollments.html  my_playlist.html  submit_assignment.html  take_quiz.html  video_download.html
utils/: __init__.py  pdf_generator.py
(+5 files in other folders)
