[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-socketio>=5.5.1",
    "google-genai>=1.36.0",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "pytubefix>=10.3.5",
    "reportlab>=4.4.5",
    "sift-stack-py>=0.8.5",
    "werkzeug>=3.1.3",
    "yt-dlp>=2024.12.23",
]
